tests/toy/neg/001444_mutation.toylang
program a = { var a : int program a = { } .; } .
